# Synthea-Based-Hospital-Dashboard

./: .gitignore  pyproject.toml
api/: api.py  main.py  utilities.py
dashboard/pages/: data_generation.py
etl_pipeline/: ETL.ipynb  allergies.py  conditions.py  encounters.py  master.py  medications.py  models.py  patients.py  procedures.py
etl_pipeline/etl_notebooks/: Allergies-ETL.ipynb  Conditions-ETL.ipynb  Encounters-ETL.ipynb  Medications-ETL.ipynb  Patients-ETL.ipynb  Procedures-ETL.ipynb
etl_pipeline/models/: allergies.py  conditions.py  encounters.py  patients.py
scripts/: synthea-init.sh
synthea-frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
synthea-frontend/src/: App.jsx  index.css
synthea-frontend/src/api/: api.js
synthea-frontend/src/components/: AdvancedChartCard.jsx  AdvancedMetricsCard.jsx  DataGenerationButton.jsx  FeatureCard.jsx  KPICard.jsx  Layout.jsx  MetricsCard.jsx  Navbar.jsx  Sidebar.jsx
synthea-frontend/src/pages/: AllergiesDashboard.jsx  ConditionsDashboard.jsx  DataGeneration.jsx  EncountersDashboard.jsx  Homepage.jsx  MainDashboard.jsx  PatientDashboard.jsx
